--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "framer-motion": "^12.23.26",
-    "@google/genai": "^1.34.0"
+    "@google/genai": "^1.34.0",
+    "@supabase/supabase-js": "^2.48.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
